--- a/css/_about.scss
+++ b/css/_about.scss
@@ -1,8 +1,9 @@
 #about{
-    padding-top: 75px;
+    padding-top: 60px;
 
     h2{
         font-size: 4.5rem;
+        margin-bottom: 0;
     }
     /*
     .portrait{
@@ -16,7 +17,7 @@
         background-color: $box-background; /*#F1ECE6*/
         border-radius: 5px;
         box-shadow: 0 .5rem 1rem rgba(255, 255, 255, 0.25)!important;
-        margin: 2rem;
+        margin:  0 2rem;
 
         p{
             font-size: 1.8rem;
