--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -4,7 +4,7 @@ footer{
     .footer-nav{
         a{
             text-align: center;
-            padding: 1rem 0.5rem;
+            padding: 1rem 0.5rem 0rem;
             &:hover{
                 color: $bleu;
             }
@@ -18,7 +18,7 @@ footer{
 }
 
 .copyright{
-    margin-top: 2rem;
+    margin-top: 0.5rem;
     
     p{
         text-align: center;
