--- a/css/_works.scss
+++ b/css/_works.scss
@@ -1,13 +1,14 @@
 #works{
-    padding-top: 75px;
+    padding-top: 60px;
 
     h2{
         font-size: 4.5rem;
+        margin-bottom: 0;
     }
 
     .carousel-block{
         max-width: 40%;
-        margin: 5rem auto;
+        margin: 2rem auto;
         padding: 0 7.5rem;
     }
 
