--- a/css/index.css
+++ b/css/index.css
@@ -1228,6 +1228,12 @@ nav {
         box-shadow: 0 .5rem 1rem rgba(255, 255, 255, 0.25)!important;
     }
     */
+  /*
+    @include xl{
+        .coach-img{
+            width: 60%;
+        }
+    } */
 }
 
 #about h2 {
@@ -1272,12 +1278,6 @@ nav {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  #about .coach-img {
-    width: 60%;
   }
 }
 
@@ -1449,16 +1449,16 @@ nav {
   20% {
   }
   40% {
-    height: 18px;
+    height: 16px;
   }
   60% {
-    height: 12px;
+    height: 9px;
   }
   80% {
-    height: 42px;
+    height: 3px;
   }
   100% {
-    height: 5px;
+    height: 31px;
   }
 }
 
@@ -1466,16 +1466,16 @@ nav {
   20% {
   }
   40% {
-    height: 50px;
+    height: 33px;
   }
   60% {
-    height: 41px;
+    height: 9px;
   }
   80% {
-    height: 44px;
+    height: 11px;
   }
   100% {
-    height: 27px;
+    height: 46px;
   }
 }
 
@@ -1483,16 +1483,16 @@ nav {
   20% {
   }
   40% {
-    height: 46px;
+    height: 26px;
   }
   60% {
-    height: 32px;
+    height: 43px;
   }
   80% {
-    height: 22px;
+    height: 10px;
   }
   100% {
-    height: 5px;
+    height: 15px;
   }
 }
 
@@ -1503,13 +1503,13 @@ nav {
     height: 36px;
   }
   60% {
-    height: 44px;
+    height: 21px;
   }
   80% {
-    height: 12px;
+    height: 10px;
   }
   100% {
-    height: 10px;
+    height: 50px;
   }
 }
 
@@ -1517,16 +1517,16 @@ nav {
   20% {
   }
   40% {
-    height: 1px;
+    height: 18px;
   }
   60% {
-    height: 32px;
+    height: 1px;
   }
   80% {
-    height: 34px;
+    height: 7px;
   }
   100% {
-    height: 18px;
+    height: 41px;
   }
 }
 
@@ -1534,16 +1534,16 @@ nav {
   20% {
   }
   40% {
-    height: 33px;
+    height: 19px;
   }
   60% {
-    height: 13px;
+    height: 23px;
   }
   80% {
-    height: 17px;
+    height: 38px;
   }
   100% {
-    height: 14px;
+    height: 26px;
   }
 }
 
@@ -1551,16 +1551,16 @@ nav {
   20% {
   }
   40% {
-    height: 50px;
+    height: 36px;
   }
   60% {
-    height: 5px;
+    height: 38px;
   }
   80% {
-    height: 18px;
+    height: 35px;
   }
   100% {
-    height: 9px;
+    height: 15px;
   }
 }
 
@@ -1568,16 +1568,16 @@ nav {
   20% {
   }
   40% {
-    height: 19px;
+    height: 36px;
   }
   60% {
-    height: 40px;
+    height: 10px;
   }
   80% {
-    height: 7px;
+    height: 12px;
   }
   100% {
-    height: 19px;
+    height: 13px;
   }
 }
 
@@ -1585,16 +1585,16 @@ nav {
   20% {
   }
   40% {
-    height: 38px;
+    height: 8px;
   }
   60% {
-    height: 34px;
+    height: 47px;
   }
   80% {
-    height: 33px;
+    height: 41px;
   }
   100% {
-    height: 39px;
+    height: 16px;
   }
 }
 
@@ -1602,16 +1602,16 @@ nav {
   20% {
   }
   40% {
-    height: 29px;
+    height: 7px;
   }
   60% {
-    height: 34px;
+    height: 3px;
   }
   80% {
-    height: 8px;
+    height: 6px;
   }
   100% {
-    height: 38px;
+    height: 42px;
   }
 }
 
@@ -1619,16 +1619,16 @@ nav {
   20% {
   }
   40% {
-    height: 50px;
+    height: 3px;
   }
   60% {
-    height: 2px;
+    height: 20px;
   }
   80% {
-    height: 23px;
+    height: 10px;
   }
   100% {
-    height: 40px;
+    height: 2px;
   }
 }
 
@@ -1636,16 +1636,16 @@ nav {
   20% {
   }
   40% {
-    height: 40px;
+    height: 43px;
   }
   60% {
-    height: 41px;
+    height: 15px;
   }
   80% {
-    height: 16px;
+    height: 37px;
   }
   100% {
-    height: 12px;
+    height: 18px;
   }
 }
 
@@ -1653,16 +1653,16 @@ nav {
   20% {
   }
   40% {
-    height: 47px;
+    height: 13px;
   }
   60% {
-    height: 16px;
+    height: 27px;
   }
   80% {
-    height: 29px;
+    height: 23px;
   }
   100% {
-    height: 1px;
+    height: 31px;
   }
 }
 
@@ -1670,16 +1670,16 @@ nav {
   20% {
   }
   40% {
-    height: 16px;
+    height: 43px;
   }
   60% {
-    height: 27px;
+    height: 2px;
   }
   80% {
-    height: 1px;
+    height: 2px;
   }
   100% {
-    height: 16px;
+    height: 15px;
   }
 }
 
@@ -1687,16 +1687,16 @@ nav {
   20% {
   }
   40% {
-    height: 1px;
+    height: 2px;
   }
   60% {
-    height: 49px;
+    height: 3px;
   }
   80% {
-    height: 20px;
+    height: 47px;
   }
   100% {
-    height: 45px;
+    height: 43px;
   }
 }
 
@@ -1704,16 +1704,16 @@ nav {
   20% {
   }
   40% {
-    height: 38px;
+    height: 16px;
   }
   60% {
-    height: 2px;
+    height: 35px;
   }
   80% {
-    height: 31px;
+    height: 13px;
   }
   100% {
-    height: 6px;
+    height: 25px;
   }
 }
 
@@ -1721,16 +1721,16 @@ nav {
   20% {
   }
   40% {
-    height: 49px;
+    height: 46px;
   }
   60% {
-    height: 38px;
+    height: 14px;
   }
   80% {
-    height: 21px;
+    height: 42px;
   }
   100% {
-    height: 50px;
+    height: 35px;
   }
 }
 
@@ -1738,16 +1738,16 @@ nav {
   20% {
   }
   40% {
-    height: 9px;
+    height: 26px;
   }
   60% {
-    height: 24px;
+    height: 27px;
   }
   80% {
-    height: 31px;
+    height: 29px;
   }
   100% {
-    height: 49px;
+    height: 23px;
   }
 }
 
@@ -1755,16 +1755,16 @@ nav {
   20% {
   }
   40% {
-    height: 45px;
+    height: 10px;
   }
   60% {
-    height: 21px;
+    height: 33px;
   }
   80% {
-    height: 38px;
+    height: 49px;
   }
   100% {
-    height: 5px;
+    height: 32px;
   }
 }
 
@@ -1772,16 +1772,16 @@ nav {
   20% {
   }
   40% {
-    height: 15px;
+    height: 19px;
   }
   60% {
-    height: 13px;
+    height: 6px;
   }
   80% {
-    height: 17px;
+    height: 11px;
   }
   100% {
-    height: 24px;
+    height: 48px;
   }
 }
 
@@ -1820,63 +1820,63 @@ nav {
 }
 
 #equalizer #levels .level.level1:after {
-  height: 39px;
-  -webkit-animation: pump-it-up1 6110ms linear infinite alternate;
-          animation: pump-it-up1 6110ms linear infinite alternate;
+  height: 5px;
+  -webkit-animation: pump-it-up1 4635ms linear infinite alternate;
+          animation: pump-it-up1 4635ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level2:after {
-  height: 42px;
-  -webkit-animation: pump-it-up2 5784ms linear infinite alternate;
-          animation: pump-it-up2 5784ms linear infinite alternate;
+  height: 46px;
+  -webkit-animation: pump-it-up2 2982ms linear infinite alternate;
+          animation: pump-it-up2 2982ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level3:after {
-  height: 45px;
-  -webkit-animation: pump-it-up3 5144ms linear infinite alternate;
-          animation: pump-it-up3 5144ms linear infinite alternate;
+  height: 37px;
+  -webkit-animation: pump-it-up3 2420ms linear infinite alternate;
+          animation: pump-it-up3 2420ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level4:after {
-  height: 25px;
-  -webkit-animation: pump-it-up4 5654ms linear infinite alternate;
-          animation: pump-it-up4 5654ms linear infinite alternate;
+  height: 45px;
+  -webkit-animation: pump-it-up4 5134ms linear infinite alternate;
+          animation: pump-it-up4 5134ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level5:after {
-  height: 4px;
-  -webkit-animation: pump-it-up5 2094ms linear infinite alternate;
-          animation: pump-it-up5 2094ms linear infinite alternate;
+  height: 33px;
+  -webkit-animation: pump-it-up5 4787ms linear infinite alternate;
+          animation: pump-it-up5 4787ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level6:after {
-  height: 16px;
-  -webkit-animation: pump-it-up6 2234ms linear infinite alternate;
-          animation: pump-it-up6 2234ms linear infinite alternate;
+  height: 32px;
+  -webkit-animation: pump-it-up6 6936ms linear infinite alternate;
+          animation: pump-it-up6 6936ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level7:after {
-  height: 8px;
-  -webkit-animation: pump-it-up7 3443ms linear infinite alternate;
-          animation: pump-it-up7 3443ms linear infinite alternate;
+  height: 13px;
+  -webkit-animation: pump-it-up7 6828ms linear infinite alternate;
+          animation: pump-it-up7 6828ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level8:after {
-  height: 4px;
-  -webkit-animation: pump-it-up8 5436ms linear infinite alternate;
-          animation: pump-it-up8 5436ms linear infinite alternate;
+  height: 36px;
+  -webkit-animation: pump-it-up8 5422ms linear infinite alternate;
+          animation: pump-it-up8 5422ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level9:after {
-  height: 42px;
-  -webkit-animation: pump-it-up9 5825ms linear infinite alternate;
-          animation: pump-it-up9 5825ms linear infinite alternate;
+  height: 8px;
+  -webkit-animation: pump-it-up9 5378ms linear infinite alternate;
+          animation: pump-it-up9 5378ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level10:after {
-  height: 42px;
-  -webkit-animation: pump-it-up10 5423ms linear infinite alternate;
-          animation: pump-it-up10 5423ms linear infinite alternate;
+  height: 19px;
+  -webkit-animation: pump-it-up10 2481ms linear infinite alternate;
+          animation: pump-it-up10 2481ms linear infinite alternate;
 }
 
 #contact {
